1.3.9: Zombies un poco mejorado